--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  color: red;
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+nav {
+  text-align: center;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: green;
+}
+
+figcaption {
+  text-align: center;
+  font-size: small;
+}
+
+#featured-property > p {
+  width: 800px;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#details > div {
+  background: pink;
+  float: left;
+  width: 25%;
+  text-align: center;
+}
